Fixed display issues with tje jobs on smaller resolutions

--- a/saltgui/static/stylesheets/page.css
+++ b/saltgui/static/stylesheets/page.css
@@ -160,7 +160,7 @@ pre .hostname:first-of-type {
 
 .jobs li .function {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 14px;
   color: #3a3a3a;
   display: inline-block;
 }
@@ -169,10 +169,6 @@ pre .hostname:first-of-type {
   font-weight: 500;
   font-size: 18px;
   color: #505050;
-  display: inline-block;
-  transform: translateY(4px);
-  margin-left: 7px;
-  float: right;
 }
 
 .jobs li .time {
@@ -204,5 +200,3 @@ pre .hostname:first-of-type {
     margin-right: 0;
     margin-bottom: 10px;
   }
-
-}
